# doctor-appointment-system

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: appointments.py  auth.py  doctors.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: types.ts
frontend/src/pages/: BookAppointment.tsx  Dashboard.tsx  DoctorsList.tsx  Landing.tsx  Login.tsx  Register.tsx
